--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.1",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.2"
   }
 }
