Completed till zod validation

--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -18,6 +18,8 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.1",
     "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.2"
+    "ws": "^8.18.2",
+    "@repo/backend-common" : "workspace:*"
+    
   }
 }
