--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -18,6 +18,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@repo/backend-common" : "workspace:*",
+    "@repo/common" : "workspace:*"
+
   }
 }
