--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -18,8 +18,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.1",
     "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.2",
-    "@repo/backend-common" : "workspace:*"
-    
+    "ws": "^8.18.2"
+  },
+  "devDependencies": {
+    "@repo/backend-common":"workspace:*"
   }
 }
