--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -1,22 +1,21 @@
 {
   "name": "@repo/backend-common",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "exports": {
+    "./config": "./src/index.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "exports": {
-    "./config": "./src/index.js"
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@repo/typescript-config": "workspace:*"
-  },
+  "description": "",
   "dependencies": {
-    "@types/node": "^22.15.3"
+    "@types/node": "^22.10.5"
   }
 }
