--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,23 +1,22 @@
 {
   "name": "@repo/database",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "exports": {
+    "./client": "./src/index.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "exports":{
-    "./client" :"./scr/index.ts"
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@repo/typescript-config": "workspace:*"
-  },
+  "description": "",
   "dependencies": {
-    "@prisma/client": "6.9.0",
-    "prisma": "^6.9.0"
+    "@prisma/client": "6.2.1",
+    "prisma": "^6.2.1"
   }
 }
