Completion of the http backend

--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "6.9.0",
     "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.9.0"
   },
   "devDependencies": {
-    "@repo/backend-common":"workspace:*",
-    "@repo/common" : "workspace:*",
-    "@repo/database":"workspace:*"
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
+    "@repo/database": "workspace:*"
   }
 }
